--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>unixtime</title>
 <script type="module">
 const f = () => {
-  document.body.textContent = Date.now().getTime().toString(2);
+  document.body.textContent = Date.now().toString(2);
   requestAnimationFrame(f);
 };
 f();
