--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script type="module">
 const f = () => {
   const date = Date.now();
+  document.body.textContent = "";
   document.body.append((date>>20).toString(2));
   document.body.append((date&(1<<20-1)).toString(2));
   requestAnimationFrame(f);
