--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ const f = () => {
   const date = Date.now();
   document.body.textContent = "";
   add((date>>20).toString(2),"q");
-  add((date & (1<<20)-1).toString(2),"ms");
+  add((date & (1<<8)-1<<12).toString(2),"gs");
+  add((date & (1<<12)-1).toString(2),"ms");
   requestAnimationFrame(f);
 };
 f();
