--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ const add = (n, unit) => {
 const f = () => {
   const date = Date.now();
   document.body.textContent = "";
-  add((date>>20).toString(2),"q");
-  add((date>>12 & (1<<8)-1).toString(2),"gs");
-  add((date>>8 & (1<<4)-1).toString(2),"ls");
+  add((date>>20).toString(16),"q");
+  add((date>>16 & (1<<4)-1).toString(16),"bmin");
+  add((date>>12 & (1<<4)-1).toString(16),"gs");
+  add((date>>8 & (1<<4)-1).toString(16),"ls");
   requestAnimationFrame(f);
 };
 f();
