--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@ const add = n => {
   p.append(n);
 };
 const f = () => {
-  const date = 1702713220032;
+  const date = Date.now();
   document.body.textContent = "";
-  add(date);
-  add(date+1);
-  add(date/2);
-  add(/*(date>>20).toString(16)+"q"*/date>>0);
+  add((date>>20).toString(16)+"q");
   add((date>>16 & (1<<4)-1).toString(16)+":"+(date>>8 & (1<<8)-1).toString(16));
   requestAnimationFrame(f);
 };
