--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@ const add = n => {
 const f = () => {
   let date = Date.now();
   document.body.textContent = "";
-  const q = Math.floor(date / 2**20);
-  date -= q * 2**20;
-  add(q.toString(16)+"q");
-  const bmin = Math.floor(date / 2**16);
-  date -= bmin * 2**16;
-  add(bmin.toString(16)+":"+Math.floor(date / 2**8).toString(16));
+  date = Math.floor(date / 16**2);
+  const ls = date % 16**2;
+  date -= ls;
+  date /= 16**2;
+  const bmin = date % 16**2;
+  date -= bmin;
+  date /= 16**2;
+  const gh = date % 16**1;
+  date -= gh;
+  date /= 16**1;
+  const gd = date % 16**1;
+  date -= gd;
+  date /= 16**1;
+  const dmon = date % 16**1;
+  date -= dmon;
+  date /= 16**1;
+  const dy = date;
+  add(`${dy}/${dmon}/${gd}`);
+  add(`${gh}:${bmin}:${ls}`);
   requestAnimationFrame(f);
 };
 f();
