--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@ const f = () => {
   const ls = date % 16**2;
   date -= ls;
   date /= 16**2;
-  const bmin = date % 16**2;
+  const bmin = date % 16**1;
   date -= bmin;
-  date /= 16**2;
-  const gh = date % 16**1;
-  date -= gh;
   date /= 16**1;
-  const gd = date % 16**1;
-  date -= gd;
+  const lh = date % 16**2;
+  date -= lh;
+  date /= 16**2;
+  const sweek = date % 16**1;
+  date -= sweek;
   date /= 16**1;
   const dmon = date % 16**1;
   date -= dmon;
   date /= 16**1;
   const dy = date;
-  add(`${dy}/${dmon}/${gd}`);
-  add(`${gh}:${bmin}:${ls}`);
+  add(`${dy.toString(16)}/${dmon.toString(16)}/${sweek.toString(16)}`);
+  add(`${lh.toString(16)}:${bmin.toString(16)}:${ls.toString(16)}`);
   requestAnimationFrame(f);
 };
 f();
