--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@ const add = n => {
 const f = () => {
   let date = Date.now();
   document.body.textContent = "";
-  date = Math.floor(date / 16**2);
-  const ls = date % 16**2;
-  date -= ls;
-  date /= 16**2;
-  const bmin = date % 16**1;
+  date = Math.floor(date / 2**10);
+  const bs = date % 2**6;
+  date -= bs;
+  date /= 2**6;
+  const bmin = date % 2**6;
   date -= bmin;
-  date /= 16**1;
-  const lh = date % 16**2;
-  date -= lh;
-  date /= 16**2;
-  const sweek = date % 16**1;
-  date -= sweek;
-  date /= 16**1;
-  const dmon = date % 16**1;
-  date -= dmon;
-  date /= 16**1;
-  const dy = date;
-  add(`${dy.toString(16)}/${dmon.toString(16)}/${sweek.toString(16)}`);
-  add(`${lh.toString(16)}:${bmin.toString(16)}:${ls.toString(16)}`);
+  date /= 2**6;
+  const bh = date % 2**4;
+  date -= bh;
+  date /= 2**4;
+  const bdw = date % 2**3;
+  const bd = date % 2**5;
+  date -= bd;
+  date /= 2**5;
+  const bmon = date % 2**4;
+  date -= bmon;
+  date /= 2**4;
+  const by = date;
+  add(`${by}/${bmon}/${bd}(${bdw})`);
+  add(`${bh}:${bmin}:${bs}`);
   requestAnimationFrame(f);
 };
 f();
